--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -118,11 +118,11 @@ a {
     line-height: 22px;
 
     &::after {
-        transition: opacity 0.3s, transform 0.3s;
-        transform: translateY(5px);
+        transition: opacity 0.2s, transform 0.3s;
+        transform: translateY(4px);
         background: @link;
         position: absolute;
-        top: 100%;
+        bottom: 0;
         left: 0;
         content: '';
         width: 100%;
